reservas de recursoso del cra iniciado

--- a/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
+++ b/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
@@ -25,7 +25,7 @@
                         </p:panelGrid>
                         <p:panelGrid columns="1">
                             <p:dataTable id="representantes" value="#{representanteController.representantes}" var="r"
-                                         scrollable="true" emptyMessage="Nada que mostrar.">
+                                         scrollable="true" emptyMessage="Sin registros aún.">
                                 <f:facet name="header">
                                     #{representanteController.nombreGrado}
                                 </f:facet>
