--- a/saitae-web/src/main/webapp/pages/solicitudR.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudR.xhtml
@@ -146,7 +146,8 @@
 
                         <p:dataTable id="alumnos" var="e" value="#{reservaSController.estudiantes}" 
                                      editable="true" widgetVar="alumnos1" styleClass="tabla"
-                                     emptyMessage="Sin registros aún." rendered="#{reservaSController.alumnos}">
+                                     emptyMessage="Aún no ha agregado los nombres de los estudiantes del grupo." 
+                                     rendered="#{reservaSController.alumnos}">
                             <f:facet name="header">
                                 Agregue los estudiantes en el grupo
                             </f:facet>
@@ -178,81 +179,161 @@
                             <div class="ui-g-12">
                                 <p:commandButton id="b" value="+" styleClass="ui-priority-primary" 
                                                  process="@this"
-                                                 action="#{reservaSController.onAddNew()}" 
+                                                 action="#{reservaSController.onAddNew('es')}" 
                                                  title="Agregar un alumno al grupo."
                                                  update="alumnos" rendered="#{reservaSController.alumnos}"/>
                             </div>
                         </div>
                         <h:panelGrid columns="3">
                             <p:column/>
-                            <p:commandButton id="summit" value="Solicitar" process="@this"
+                            <p:commandButton id="summitCra" value="Solicitar" process="@this"
                                              action="#{reservaSController.guardar()}"/>
                             <p:column/>
                         </h:panelGrid>
                     </h:panelGrid>
                 </p:panel>
-                <p:tab id="lab" rendered="#{reservaSController.lab}" >
-                    <p:panel header="Reserva de recursoso del laboratorio de ciencias naturales">
-                        <h:panelGrid columns="1">
-                            <h:panelGrid columns="2">
-                                <p:outputLabel for="prac" value="Número de práctica: "/>
-                                <p:inputText id="prac" value=""/>
+                <p:panel header="Reserva de recursoso del laboratorio de ciencias naturales"
+                         rendered="#{reservaSController.lab}">
+                    <h:panelGrid columns="1">
+                        <h:panelGrid columns="2">
+                            <p:outputLabel for="prac" value="Número de práctica: "/>
+                            <p:inputText id="prac" value="#{reservaSController.numeroPractica}">
+                                <p:ajax listener="#{reservaSController.onBlur}"/>
+                            </p:inputText>
 
-                                <p:outputLabel for="tema" value="Tema: "/>
-                                <p:inputText id="tema" value="#{reservaSController.reserva.tema}"/>
+                            <p:outputLabel for="teml" value="Tema: "/>
+                            <p:inputText id="teml" value="#{reservaSController.tema}" required="true">
+                                <p:ajax listener="#{reservaSController.onBlur}"/>
+                            </p:inputText>
 
-                                <p:outputLabel for="obj1" value="Objetivo"/>
-                                <p:inputText id="obj1" value="#{reservaSController.reserva.objetivoTema}"/>
+                            <p:outputLabel for="objl" value="Objetivo del tema: "/>
+                            <p:inputTextarea id="objl" value="#{reservaSController.objetivo}" 
+                                             placeholder="Objetivo del tema" >
+                                <p:ajax event="blur" listener="#{reservaSController.onBlur}"/>
+                            </p:inputTextarea>
 
-                                <p:outputLabel for="fecu" value="Fecha de uso: "/>
-                                <p:datePicker id="fecu" value="#{reservaSController.reserva.reservaEntrega}" 
-                                              hourFormat="12" immediate="true" locale="es"
-                                              monthNavigator="true"
-                                              showIcon="true" size="30" placeholder="Seleccione la fecha"
-                                              showTime="true" showButtonBar="true"/>
-                            </h:panelGrid>
-                            <p:dataTable id="inte" var="i" value="#{reservaSController.estudiantes}" 
-                                         editable="true" widgetVar="inte1" styleClass="tabla"
-                                         emptyMessage="Sin registros aún.">
-                                <f:facet name="header">
-                                    Recursos a utilizar
-                                </f:facet>
+                            <p:outputLabel for="fecl" value="fecha en la que hará uso del equipo"/>
+                            <p:datePicker id="fecl" value="#{reservaSController.reserva.reservaEntrega}" 
+                                          locale="es" pattern="EEE dd/MMM/yyyy"
+                                          monthNavigator="true" showIcon="true" size="30" 
+                                          placeholder="Seleccione la fecha"/>
 
-                                <p:ajax event="rowEdit" listener="#{reservaSController.onRowEdit}"/>
-                                <p:ajax event="rowEditCancel" listener="#{reservaSController.onRowCancel}"/>
+                            <p:outputLabel for="hil" value="Hora de inicio del uso"/>
+                            <p:datePicker id="hil" value="#{reservaSController.hi}"
+                                          monthNavigator="true" maxlength="50" locale="es"
+                                          showTime="true" hourFormat="12" timeOnly="true"
+                                          showIcon="true" required="true" pattern="hh:mm a">
+                                <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
+                                <p:ajax event="change" listener="#{reservaSController.horasSelect}"/>
+                            </p:datePicker>
 
-                                <p:column headerText="Cantidad" style="width: 50px;">
-                                    <p:cellEditor>
-                                        <f:facet name="output">
-                                            <h:outputText value="#{e.idestudiante}" />
-                                        </f:facet>
-                                        <f:facet name="input">
-                                            <p:inputText value="#{e.idestudiante}" 
-                                                         style="width:100%" label="NIE"/>
-                                        </f:facet>
-                                    </p:cellEditor>
-                                </p:column>
-
-                                <p:column headerText="Nombre Recurso">
-                                    <h:outputText value="#{e.persona.personaNombre} #{e.persona.personaApellido}"/>
-                                </p:column>
-
-                                <p:column style="width:35px">
-                                    <p:rowEditor />
-                                </p:column>
-                            </p:dataTable> 
-                            <div class="ui-g">
-                                <div class="ui-g-12">
-                                    <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                                     process="@this"
-                                                     action="#{reservaSController.onAddNew()}" 
-                                                     title="Agregar un alumno al grupo."
-                                                     update="alumnos"/>
-                                </div>
-                            </div>
+                            <p:outputLabel for="hfl" value="Hora de fin del uso"/>
+                            <p:datePicker id="hfl" value="#{reservaSController.hf}"
+                                          monthNavigator="true" maxlength="50" locale="es"
+                                          showTime="true" hourFormat="12" timeOnly="true"
+                                          showIcon="true" required="true" pattern="hh:mm a">
+                                <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
+                                <p:ajax event="change" listener="#{reservaSController.horasSelect}"/>
+                            </p:datePicker>
                         </h:panelGrid>
-                    </p:panel>
-                </p:tab>
+                        <p:dataTable id="art" var="i" value="#{reservaSController.solicitud}" 
+                                     editable="true" widgetVar="inte1" styleClass="tabla"
+                                     emptyMessage="Aún no ha especificado recursos a reservar.">
+                            <f:facet name="header">
+                                Recursos a utilizar
+                            </f:facet>
+
+                            <p:ajax event="rowEdit" listener="#{reservaSController.onRowEdit}"/>
+                            <p:ajax event="rowEditCancel" listener="#{reservaSController.onRowCancel}"/>
+
+                            <p:column headerText="Cantidad" style="width: 10%;">
+                                <p:cellEditor>
+                                    <f:facet name="output">
+                                        <h:outputText value="#{i.solicitudReservaComentario}" />
+                                    </f:facet>
+                                    <f:facet name="input">
+                                        <p:inputText value="#{i.solicitudReservaComentario}" 
+                                                     style="width:100%" label="Cantidad"/>
+                                    </f:facet>
+                                </p:cellEditor>
+                            </p:column>
+
+                            <p:column headerText="Nombre Recurso">
+                                <p:cellEditor>
+                                    <f:facet name="output">
+                                        <h:outputText value="#{i.recurso.nombre}" />
+                                    </f:facet>
+                                    <f:facet name="input">
+                                        <p:selectOneMenu id="tre" value="#{i.recurso}" 
+                                                         converter="omnifaces.SelectItemsConverter"
+                                                         required="true" immediate="true">
+                                            <f:selectItem itemLabel="Seleccione" itemValue="#{null}" noSelectionOption="true"/>
+                                            <f:selectItems value="#{reservaSController.recursos}" var="r"
+                                                           itemValue="#{r}" itemLabel="#{r.nombre}"/>
+                                        </p:selectOneMenu>
+                                    </f:facet>
+                                </p:cellEditor>
+                            </p:column>
+
+                            <p:column style="width:35px">
+                                <p:rowEditor />
+                            </p:column>
+                        </p:dataTable> 
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                                 process="@this"
+                                                 action="#{reservaSController.onAddNew('art')}" 
+                                                 title="Recursos a la lista."
+                                                 update="art"/>
+                            </div>
+                        </div>
+                        
+                        <p:dataTable id="alumnosl" var="el" value="#{reservaSController.estudiantes}" 
+                                     editable="true" widgetVar="alumnos1" styleClass="tabla"
+                                     emptyMessage="Aún no ha agregado los nombres de los estudiantes del grupo.">
+                            <f:facet name="header">
+                                Agregue los estudiantes en el grupo
+                            </f:facet>
+
+                            <p:ajax event="rowEdit" listener="#{reservaSController.onRowEdit}"/>
+                            <p:ajax event="rowEditCancel" listener="#{reservaSController.onRowCancel}"/>
+
+                            <p:column headerText="NIE">
+                                <p:cellEditor>
+                                    <f:facet name="output">
+                                        <h:outputText value="#{el.idestudiante.toString().substring(1)}" />
+                                    </f:facet>
+                                    <f:facet name="input">
+                                        <p:inputText value="#{el.idestudiante}" 
+                                                     style="width:100%" label="NIE"/>
+                                    </f:facet>
+                                </p:cellEditor>
+                            </p:column>
+
+                            <p:column headerText="Nombre">
+                                <h:outputText value="#{el.persona.personaNombre} 
+                                              #{el.persona.personaApellido}"/>
+                            </p:column>
+
+                            <p:column style="width:35px">
+                                <p:rowEditor />
+                            </p:column>
+                        </p:dataTable> 
+                        <div class="ui-g">
+                            <div class="ui-g-12">
+                                <p:commandButton id="bl" value="+" styleClass="ui-priority-primary" 
+                                                 process="@this"
+                                                 action="#{reservaSController.onAddNew('es')}" 
+                                                 title="Agregar un alumno al grupo."
+                                                 update="alumnosl"/>
+                            </div>
+                        </div>
+                        
+                        <p:commandButton id="summitLab" value="Solicitar" process="@this"
+                                         action="#{reservaSController.guardar()}"/>
+                    </h:panelGrid>
+                </p:panel>
                 <p:tab id="bib" rendered="#{reservaSController.bib}" >
                     <p:panel header="Reserva de recursoso de la biblioteca">
                         biblioteca
