reservas de recursoso de lab. CC.NN enviao a revisión

--- a/saitae-web/src/main/webapp/index.xhtml
+++ b/saitae-web/src/main/webapp/index.xhtml
@@ -99,7 +99,7 @@
                             <div class="col-md-6 widget">
                                 <div class="widget-body">
                                     <p class="text-right">
-                                        Copyright &copy; 2020-2025, C.E. INTEX. Designed by 
+                                        Copyright &copy; Universidad De El Salvador. Designed by 
                                         <a href="https://www.facebook.com/gad.murcia" rel="designer">Guillermo Delsas</a> 
                                         and
                                         <a href="https://www.facebook.com/nathmenendez" rel="designer">Gabriela Menéndez</a> 
