--- a/saitae-web/src/main/webapp/pages/solicitudR.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudR.xhtml
@@ -8,6 +8,9 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <ui:define name="content">
+        <h:form id="not">
+            <p:growl id="msgs" life="30000" showDetail="true"/>
+        </h:form>
         <h:form id="form">
             <h:panelGrid columns="1">
                 <h:panelGrid columns="2">
@@ -117,10 +120,13 @@
                             </p:selectCheckboxMenu>
 
                             <p:outputLabel for="fec" value="fecha en la que hará uso del equipo"/>
-                            <p:datePicker id="fec" value="#{reservaSController.reserva.reservaEntrega}" 
+                            <p:datePicker id="fec" value="#{reservaSController.fecha}" 
                                           hourFormat="12" immediate="true" locale="es"
                                           monthNavigator="true" showIcon="true" size="30" 
-                                          placeholder="Seleccione la fecha" showButtonBar="true"/>
+                                          placeholder="Seleccione la fecha" showButtonBar="true">
+                                <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
+                                <p:ajax event="change" listener="#{reservaSController.horasSelect}"/>
+                            </p:datePicker>
 
                             <p:outputLabel for="hi" value="Hora de inicio del uso"/>
                             <p:datePicker id="hi" value="#{reservaSController.hi}"
@@ -213,10 +219,11 @@
                             </p:inputTextarea>
 
                             <p:outputLabel for="fecl" value="fecha en la que hará uso del equipo"/>
-                            <p:datePicker id="fecl" value="#{reservaSController.reserva.reservaEntrega}" 
+                            <p:datePicker id="fecl" value="#{reservaSController.fecha}" 
                                           locale="es" pattern="EEE dd/MMM/yyyy"
                                           monthNavigator="true" showIcon="true" size="30" 
                                           placeholder="Seleccione la fecha">
+                                <p:ajax event="dateSelect" listener="#{reservaSController.fechaSelect}"/>
                                 <p:ajax event="change" listener="#{reservaSController.horasSelect}"/>
                             </p:datePicker>
 
